# py-infinity

./: Dockerfile  Dockerfile.standalone  README.md
infinity_emb/: cli.py  env.py  infinity_server.py
infinity_emb/inference/: loading_strategy.py  select_model.py
infinity_emb/transformer/: abstract.py  acceleration.py  utils_optimum.py
infinity_emb/transformer/classifier/: optimum.py
infinity_emb/transformer/crossencoder/: optimum.py
infinity_emb/transformer/embedder/: optimum.py
libs/infinity_emb/: pyproject.toml
libs/infinity_emb/infinity_emb/: _optional_imports.py  primitives.py
libs/infinity_emb/infinity_emb/inference/: batch_handler.py
libs/infinity_emb/infinity_emb/transformer/: utils.py  utils_optimum.py
